crates/keron-lang/tests/corpus/errors/parse/empty_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '}' expected something else, '#', '-', 'r', '"', '"true"', '"false"', '"null"', int, '[', '{', '"if"', '"for"', '"match"', identifier, or '('
  --> 1:12
  |
1 | val a = "${}"
  |            ^
